tests/parser-test-files/bad-files/parse-or.1.error
error: Malformed or expression
  --> test:4:14
   |
 4 |  (define x (or))
   |               ^ expected one or more arguments
